force-app/main/default/objects/YG_Category_Service_Type__mdt/YG_Category_Service_Type__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to store the top category services type of a product.</description>
    <label>YG Category Service Type</label>
</CustomObject>