force-app/main/default/objects/YG_Category_Service_Type__mdt/fields/Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Name__c</fullName>
    <description>This filed is used for reference purpose of Category Name depend on Top Product Category</description>
    <label>Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>