force-app/main/default/objects/YG_Category_Service_Type__mdt/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <description>This field is used to store the Language Code</description>
    <label>Language Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>