force-app/main/default/objects/YG_Category_Service_Type__mdt/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>This filed is used to store the Service Type and code by + separated</description>
    <label>Service Type</label>
    <type>TextArea</type>
</CustomField>