force-app/main/default/objects/YG_Category_Service_Type__mdt/fields/Top_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Top_Category_Code__c</fullName>
    <description>This field is used to store the Top Category Code of a product</description>
    <label>Top Category Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>